--- a/db.properties
+++ b/db.properties
@@ -1,4 +1,4 @@
 user=javauser
-password=00110011a
-dburl=jdbc:mysql://localhost:3306/cblol
+password=00110011aa@A
+dburl=jdbc:mysql://localhost:3306/mydb
 useSSL=false
